# jitx-emn-importer

./: .gitignore  CLAUDE.md  README.md  emn-importer.stanza  idf-parser.stanza  pyproject.toml  slm.toml  stanza.proj
jitx_emn_importer/: __init__.py  emn_importer.py  idf_parser.py
src/: emn-importer.stanza  emn_importer.py  idf-parser.stanza  idf_parser.py  setup.py
tests/: __init__.py  conftest.py  example_usage.py  test_emn_importer.py  test_geometry.py  test_idf_parser.py  test_import.py  test_real_emn_files.py
