[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jitx-emn-importer"
version = "1.0.0"
description = "EMN/IDF importer for JITX Python - converts mechanical CAD data to JITX geometry"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "JITX Inc."}
]
dependencies = [
    "jitx>=4.0",
]
keywords = ["jitx", "pcb", "eda", "emn", "idf", "bdf", "mechanical", "import"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
emn-import = "jitx_emn_importer.emn_importer:main"

[project.urls]
"Bug Reports" = "https://github.com/JITx-Inc/jitx-emn-importer/issues"
"Source" = "https://github.com/JITx-Inc/jitx-emn-importer"
"Documentation" = "https://docs.jitx.com/"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["jitx_emn_importer"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
